# TierListApp

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Tier.cpp  Tier.h  TierListApp  TierListApp.pro  TierSettingsDialog.cpp  TierSettingsDialog.h  main.cpp  readme.md
include/: MainWindow.h  ScrollHandle.h  Tier.h
old/: TierListApp
src/: MainWindow.cpp  ScrollHandle.cpp  Tier.cpp
